Finished persistance tests and folder